# QtTestPrueba

./: CMakeLists.txt  Main.qml  README.md  main.cpp  run_tests.sh  test_data.json  tst_log.txt  tst_login.cpp  tst_login.qml
